--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,18 +11,24 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./postgres/init.sql:/docker-entrypoint-initdb.d/init.sql # Автоматическое выполнение init.sql
+      - ./postgres/init.sql:/docker-entrypoint-initdb.d/01-init.sql
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+
 
   web:
     build:
-      context: ./admin_panel
-      dockerfile: Dockerfile
-    container_name: tg_admin_panel
+      context: .
+    container_name: tg_web
     command: >
-      sh -c "python manage.py migrate &&
-             python manage.py start"
+      sh -c "python admin_panel/manage.py migrate &&
+             python admin_panel/manage.py start"
     volumes:
-      - ./admin_panel:/app
+      - .:/app
     ports:
       - "8000:8000"
     environment:
@@ -31,24 +37,9 @@ services:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_HOST=db
     depends_on:
-      - db
+      db:
+        condition: service_healthy
 
-  bot:
-    build:
-      context: ./telegram_bot
-      dockerfile: Dockerfile
-    container_name: tg_bot
-    command: >
-      python bot/main.py
-    volumes:
-      - ./telegram_bot:/app
-    environment:
-      - POSTGRES_DB=${POSTGRES_DB}
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_HOST=db
-    depends_on:
-      - db
 
 volumes:
   postgres_data:
