fix postgres port

--- a/.env
+++ b/.env
@@ -2,7 +2,8 @@
 POSTGRES_DB=tgbot_db
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=12896
-POSTGRES_HOST=127.0.0.1
+POSTGRES_HOST=db
+POSTGRES_PORT=5432
 
 # Telegram Bot
 BOT_TOKEN=7787384061:AAHjtMNrL9dLzxqHuMSk83ukrYYUmPaioRo
